[package]
name = "timeit"
version = "0.1.2"
authors = ["Gustav Larsson <gustav.m.larsson@gmail.com>"]
description = "Timing macros for Rust modelled after Python's timeit"
repository = "https://github.com/gustavla/timeit"
readme = "README.md"
keywords = ["timing", "time", "benchmark", "optimization", "performance"]
license = "MIT"

[lib]
name = "timeit"
doctest = false
